[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.37.0", features = ["full"]}
oba_network = {path = "../network", version = "0.1.0"}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bytes = { version = "1", features = ["serde"] }
byteorder = "1.5.0"
chrono = {version = "0.4.38", features = ["default", "serde"]}
serde = {version = "1.0.201", features = ["default", "derive", "alloc", "rc"]}
serde_json = {version = "1.0.117", features = ["default"]}
uuid = { version = "1.8.0", features = ["v4"] }
xxhash-rust = {version = "0.8.7", features = ["xxh3", "const_xxh3"]}
bincode = "1.3.3"
anyhow = "1.0.83"
thiserror="1.0.60"
strum={version = "0.26.2", features = ["derive"] }
rand = "0.8.5"
