[package]
name = "oba_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", features = ["serde"] }
byteorder = "1.5.0"
bincode = "1.3.3"
chrono = {version = "0.4.38", features = ["default", "serde"]}
serde = {version = "1.0.201", features = ["default", "derive", "alloc", "rc"]}
uuid = { version = "1.8.0", features = ["v4"] }
anyhow = "1.0.83"
thiserror="1.0.60"
strum={version = "0.26.2", features = ["derive"] }
